Feat/pagination (#8)
* fix: swagger docs

* feat: implement pagination

* chore: set golangci-lint version to 1.48.0
